# context-os

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
contextos/: cli.py  daemon.py  pricing.py  safety.py  session_memory.py  settings.py  tokens.py
contextos/archive/: __init__.py  store.py
contextos/classifier/: __init__.py  rules.py
contextos/compactor/: __init__.py  prompt.py  service.py
contextos/dashboard/: app.py  queries.py
contextos/installer/: __init__.py  detector.py  patcher.py
contextos/ledger/: __init__.py  db.py  schema.sql  stats.py
contextos/llm/: __init__.py  download.py  embedder.py  generator.py  warmup.py
contextos/proxy/: __init__.py  app.py  payload.py
contextos/reconstructor/: __init__.py  rebuild.py
contextos/retrieval/: __init__.py  triggers.py
scripts/: smoke_local_llm.py  smoke_real.py
tests/: conftest.py  test_archive.py  test_classifier.py  test_claude_code_fixture.py  test_compactor.py  test_dashboard_http.py  test_dashboard_queries.py  test_e2e_smoke.py  test_installer.py  test_ledger.py  test_ledger_stats.py  test_proxy.py  test_reconstructor.py  test_retrieval.py  test_safety.py  test_session_memory.py  test_tokens.py
